--- a/main/res/layout/activity_actividad_juego.xml
+++ b/main/res/layout/activity_actividad_juego.xml
@@ -2,21 +2,22 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/btnLocalizacion"
+    android:id="@+id/constrain"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@drawable/fondo"
     tools:context=".ActividadJuego">
 
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainerView"
-        android:name="com.bumptech.glide.manager.SupportRequestManagerFragment"
-        android:layout_width="326dp"
-        android:layout_height="257dp"
+    <ImageView
+        android:id="@+id/charImage"
+        android:layout_width="304dp"
+        android:layout_height="251dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.495"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.312" />
+        app:layout_constraintVertical_bias="0.316" />
 
     <ImageView
         android:id="@+id/imageView"
@@ -25,20 +26,19 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/fondo" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <ImageView
         android:id="@+id/rickMortyImage"
         android:layout_width="181dp"
         android:layout_height="157dp"
+        android:foreground="@drawable/juegotitle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0"
-        app:srcCompat="@drawable/juegotitle" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <Button
         android:id="@+id/btnUnknown"
@@ -48,7 +48,6 @@
         android:fontFamily="@font/aldrich"
         android:text="Unknown"
         android:textColor="#FFFFFF"
-        app:iconTint="#403232"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -63,7 +62,6 @@
         android:fontFamily="@font/aldrich"
         android:text="DEAD"
         android:textColor="#FFFFFF"
-        app:iconTint="#403232"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.08"
@@ -73,13 +71,12 @@
 
     <Button
         android:id="@+id/btnAlive"
-        android:layout_width="175dp"
-        android:layout_height="67dp"
+        android:layout_width="170dp"
+        android:layout_height="60dp"
         android:backgroundTint="#8BC34A"
         android:fontFamily="@font/aldrich"
         android:text="ALIVE"
         android:textColor="#FFFFFF"
-        app:iconTint="#403232"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.915"
@@ -91,54 +88,58 @@
         android:id="@+id/deadoralive"
         android:layout_width="372dp"
         android:layout_height="125dp"
+        android:foreground="@drawable/deadoralive"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.487"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.052"
-        app:srcCompat="@drawable/deadoralive" />
-
-    <ImageView
-        android:id="@+id/charImage"
-        android:layout_width="304dp"
-        android:layout_height="251dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.495"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.316" />
+        app:layout_constraintVertical_bias="0.052" />
 
     <ImageButton
         android:id="@+id/btnBack"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:backgroundTint="#8BC34A"
-        android:contentDescription="@string/bottom_sheet_behavior"
-        app:tint="@color/white"
+        android:contentDescription="@android:string/VideoView_error_text_invalid_progressive_playback"
+        android:minWidth="48dp"
+        android:minHeight="48dp"
+        android:src="@android:drawable/ic_media_previous"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.954"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.976"
-        app:srcCompat="@android:drawable/ic_media_previous" />
+        app:layout_constraintVertical_bias="0.976" />
 
     <TextView
         android:id="@+id/textName"
-        android:layout_width="256dp"
-        android:layout_height="37dp"
+        android:layout_width="384dp"
+        android:layout_height="95dp"
         android:fontFamily="@font/aldrich"
-        android:text="TextView"
+        android:text="Cargando..."
         android:textAlignment="center"
         android:textColor="@color/white"
-        android:textSize="24sp"
+        android:textSize="34sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintHorizontal_bias="0.703"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.58" />
+        app:layout_constraintVertical_bias="0.562" />
+
+    <TextView
+        android:id="@+id/textSeconds"
+        android:layout_width="386dp"
+        android:layout_height="121dp"
+        android:fontFamily="@font/aldrich"
+        android:textAlignment="center"
+        android:textColor="@color/white"
+        android:textSize="96sp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.279" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
